feat(Snapshot): 实现基于会话的文件快照回滚功能
1.  新增Snapshot类实现文件快照的序列化与反序列化
2.  重构FileChangeTracker为会话级存储，移除旧的全局变更跟踪逻辑
3.  在WriteFileTool和EditFileTool中添加文件变更跟踪
4.  在WebAgentOrchestrator中添加会话ID上下文管理
5.  新增会话回滚相关API：rewind-check、rewind、list-snapshots
6.  新增ConversationService的transcript刷盘与销毁方法
7.  删除过时的.hipporules_example.md示例规则文件
8.  移除旧的批量回滚接口handleRollbackRange